--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="single">
-	<h1 id="subject">Subject</h1>
+	<h1 id="subject">Distance (fixed)</h1>
 	<svg id="main"></svg>
 	<div id="meta">
 		<pre>
