--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,7 @@
 	<h1 id="subject">Distance (sentiment)</h1>
 	<svg id="main"></svg>
 	<div id="meta">
-		<pre>
-			<code>
-			</code>
-		</pre>
+		<pre><code></code></pre>
 	</div>
 </body>
 
