--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,9 @@
 </head>
 
 <body class="single">
-	<h1 id="subject">Distance (sentiment)</h1>
 	<svg id="main"></svg>
 	<div id="meta">
-		<pre><code></code></pre>
+		test
 	</div>
 </body>
 
