Added user clustering

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@
 	<meta name="og:description" content="">
 </head>
 
-<body class="single">
+<body class="circles single">
+	<div id="menu">
+		<button id="circles">Toggle sentiment</button>
+		<button id="text">Toggle topics</button>
+		<button id="images">Toggle users</button>
+	</div>
 	<svg id="main"></svg>
 	<div id="meta">
 	</div>
